added onbaoerding and fixed dashboard
